--- a/profiles.css
+++ b/profiles.css
@@ -1,11 +1,4 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #fff;
-    color: #333;
-    margin: 0;
-    
-    
-}
+
     .navbar-custom {
         background-color: seagreen;
         border-bottom: 1px solid white;
@@ -26,7 +19,7 @@ body {
         border-color: white;
     }
     .main-container{
-        height: 85vh;
+        height: 100%;
         margin-top: 1vh
     }
     .btn-custom {
@@ -37,11 +30,14 @@ body {
 
     /*profile-page*/
     .all-content{
-        height: 100vh; 
+        height: 100%; 
         margin-top: 1vh;
         width: 100%;
         display: flex;
         flex-direction: row;
+        font-family: 'Arial', sans-serif;
+        background-color: #fff;
+        color: #333;
     }
     .bordered-column {
         border: 2px solid #000; /* Example: 2px solid black border */
@@ -122,7 +118,7 @@ text-align: left;
 }
 
 .reservation-aside {
-    height: 120vh;
+    height: 100%;
     padding: 2vw;
     display: flex;
     background-color: seagreen; /* This sets the background color */
