working dashboard without ajax

--- a/labs.css
+++ b/labs.css
@@ -93,7 +93,7 @@
     color: white;
 }
 .comp-whole {
-  border: 1px solid black;
+  border: 2px solid black;
 }
 .laboratories {
     margin-top: 1vh;
@@ -144,3 +144,8 @@
 .calendargroup {
     height:5vh
 }
+.calweight {
+    font-weight: bold;
+    color: white;
+    background-color: seagreen;
+  }
